--- a/css/mainheader.css
+++ b/css/mainheader.css
@@ -30,7 +30,7 @@ header{
 	width: 100%;
 	height: 100%;
 	display: flex;
-	margin: 0px 0;
+	margin: 0px auto;
 	padding: 6px 10px;
 }
 
@@ -117,6 +117,7 @@ span#menu{
 
 #menu #women{
 	color: pink;
+	padding-left: 5px;
 	
 }
 
@@ -239,24 +240,28 @@ span#bagicon{
 
 	header{
 		height: 70px;
+		margin: 0 auto;
 
 	}
 
+	.head_container{
+		max-width: 2000px;
+		position: relative;
+	}
 
 	#logo{
 		font-size: 40px;
-		width: 10%;
-		margin: 0 65px 0 0;
-		padding: 10px 15px 0 28px;
+		width: auto;
+		margin: 0 0px 0 0;
+		padding: 0px 18px 0 0px;
 
 	}
 
 	span#menu{
-		width: 15%;
+		width: auto;
 		height: 100%;
 		margin: 0 0 0 0px;
-		padding: 25px 5px 0 0px;
-		z-index: 1;
+		padding: 12px 0px 0 0px;
 		min-width: 180px;
 		text-align: left;
 	}
@@ -266,10 +271,14 @@ span#bagicon{
 
 	#menu a{
 		text-decoration: none;
-		padding: 20px 8px 0px 10px;
-		font-size: 20px;
+		padding: 20px 0px 0px 0px;
+		font-size: 26px;
 		position: relative;
 		font-family: 'Ubuntu', sans-serif;
+	}
+
+	#menu #women{
+		padding-left: 5px;
 	}
 
 
@@ -292,7 +301,7 @@ span#bagicon{
 
 	.search_bar{
 		position: relative;
-		width: 70%;
+		flex-grow: 2;
 		margin: 0;
 		padding: 17px 0 0 0px;
 	}
@@ -303,7 +312,7 @@ span#bagicon{
 
 	#search_input{
 		width: 100%;
-		height: 40px;
+		height: 43px;
 		overflow: hidden;
 	}
 
@@ -325,24 +334,28 @@ span#bagicon{
 	}
 
 	span#accounticon{
-		width: 5%;
-		margin: 0;
-		padding: 13px 0 0 0px;
+		position: relative;
+		display: inline-block;
+		width: auto;
+		margin: 0 40px 0 0;
+		padding: 10px 5px 0 0px;
+		right: 0px;
 
 	}
 	#accounticon img{
-		width: 35px;
-		padding-left: 2px ;
+		width: 30px;
 	}
 
 	span#bagicon{
-		width: 5%;
+		display: inline-block;
+		width: auto;
 		margin: 0;
-		padding: 11px 10px 0px 0px;
+		padding: 10px 0px 0px 0px;
+		right: 15px;
 	}
 
 	#bagicon img{
-		width: 38px;
+		width: 30px;
 	}
 
 }
