--- a/css/mainheader.css
+++ b/css/mainheader.css
@@ -243,7 +243,7 @@ span.bagicon{
 	left: 0;
 	position: absolute;
 	z-index: 800;
-	background-color: rgba(0,0,0,0.2);
+	background-color: rgba(0,0,0,0.7);
 	display: none;
 	opacity: 0;
 	transition: all ease-in-out 250ms;
@@ -264,7 +264,7 @@ span.bagicon{
 	width: 0;
 	overflow: hidden;
 	z-index: 900;
-	transition: all ease-in-out 250ms;
+	transition: all ease-in-out 200ms;
 }
 
 .bag--open{
@@ -285,7 +285,7 @@ span.bagicon{
 	display: block;
 	width: 3em;
 	height: 0.5em;
-	background-color: black;
+	background-color: #F5F5F5;
 	border-radius: 10px;
 }
 
